# MCPT

./: .CMakeLists.txt.swp  .demo.cpp.swo  .gitignore  .sceneTest.cpp.swp  AccTest.cpp  CMakeLists.txt  README.md  demo.cpp  learn.cpp  sceneTest.cpp
Accelerate/: AABB.cpp  AABB.h  Accelerate.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Geometry.h  KdTree.cpp  KdTree.h  Object.h  Primitive.cpp  Primitive.h  Triangular.cpp  Triangular.h
Camera/: CMakeLists.txt  Camera.cpp  Camera.h
Config/: config.h
PathTracing/: CMakeLists.txt  PathTracing.cpp  PathTracing.h
Ray/: CMakeLists.txt  Intersection.h  Ray.cpp  Ray.h
Scene/: .CMakeLists.txt.swp  .Loader.cpp.swp  .Loader.h.swp  .Material.cpp.swp  .Material.h.swp  .Mesh.cpp.swp  .Mesh.h.swp  .Scene.cpp.swp  .Scene.h.swp  .Vertex.h.swo  .Vertex.h.swp  CMakeLists.txt  Loader.cpp  Loader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Normal.h  Scene.cpp  Scene.h  Vertex.cpp  Vertex.h
balls_release/: CMakeCache.txt  Makefile  cmake_install.cmake  demo  run.sh
balls_release/Accelerate/: Makefile
balls_release/Camera/: Makefile
balls_release/PathTracing/: Makefile
balls_release/Ray/: Makefile  cmake_install.cmake
balls_release/Scene/: Makefile
cornel-release/: CMakeCache.txt  Makefile  accTest  cmake_install.cmake  demo  run.sh  sceneTest
cornel-release/Accelerate/: Makefile
cornel-release/Camera/: Makefile  cmake_install.cmake
cornel-release/PathTracing/: Makefile
cornel-release/Ray/: Makefile
cornel-release/Scene/: Makefile  cmake_install.cmake
release/: CMakeCache.txt  Makefile  cmake_install.cmake  demo
release/Accelerate/: Makefile  cmake_install.cmake
release/Camera/: Makefile
release/PathTracing/: Makefile  cmake_install.cmake
release/Ray/: Makefile
release/Scene/: Makefile
wall_release/: CMakeCache.txt  Makefile  cmake_install.cmake  demo  run.sh
wall_release/Accelerate/: Makefile
wall_release/Camera/: Makefile
wall_release/PathTracing/: Makefile
wall_release/Ray/: Makefile
wall_release/Scene/: Makefile
